Foram criadas permissões para determinadas ações, como por exemplo na criação, atualização e deleção de usuários, podendo ser feita apenas por Gestores e Administradores, por hora.