@@ -16,6 +16,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Component
@@ -32,14 +33,25 @@ public class SecurityFilter extends OncePerRequestFilter {
         final var token = this.recoverToken(request);
         final var login = tokenService.validateToken(token);
 
-        if(login != null){
-            UserEntity entity = userRepository.findByUserId(UUID.fromString(login)).orElseThrow(() -> new RuntimeException("Usuário não encontrado!"));
+        if (login != null) {
 
-            final var authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
-            final var authentication = new UsernamePasswordAuthenticationToken(entity, null, authorities);
+            UserEntity entity = userRepository.findByUserId(UUID.fromString(login))
+                    .orElseThrow(() -> new RuntimeException("Usuário não encontrado!"));
+
+            // 🔥 Recupera a ROLE direto do banco (mais seguro do que confiar no JWT)
+            String role = entity.getPosition().name(); // ADMINISTRADOR, GESTOR, etc.
+
+            var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+            var authentication = new UsernamePasswordAuthenticationToken(
+                    entity,
+                    null,
+                    authorities
+            );
 
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
+
 
         filterChain.doFilter(request, response);
     }
